@@ -6,11 +6,11 @@ import com.genius.Services.*;
 
 import java.util.List;
 import java.util.function.Predicate;
-
+import java.util.stream.Collectors;
 
 public class AdminService implements IService<Admin>, ISearchableService<Admin> {
 
-    DataStorage dataStorage;
+    private final DataStorage dataStorage;
 
     public AdminService(DataStorage dataStorage) {
         this.dataStorage = dataStorage;
@@ -18,14 +18,15 @@ public class AdminService implements IService<Admin>, ISearchableService<Admin> 
 
     @Override
     public void Add(Admin model) {
-        dataStorage.Admins.add(model);
+        dataStorage.Accounts.add(model);
     }
 
     @Override
     public void Edit(Admin model) {
-        for (int i = 0; i < dataStorage.Admins.size(); i++) {
-            if (dataStorage.Admins.get(i).getId().equals(model.getId())) {
-                dataStorage.Admins.set(i, model);
+        for (int i = 0; i < dataStorage.Accounts.size(); i++) {
+            if (dataStorage.Accounts.get(i) instanceof Admin &&
+                    dataStorage.Accounts.get(i).getUsername().equals(model.getUsername())) {
+                dataStorage.Accounts.set(i, model);
                 return;
             }
         }
@@ -33,29 +34,35 @@ public class AdminService implements IService<Admin>, ISearchableService<Admin> 
 
     @Override
     public void Delete(String id) {
-        dataStorage.Admins.removeIf(Admin -> Admin.getId().equals(id));
+        dataStorage.Accounts.removeIf(account -> account instanceof Admin && account.getUsername().equals(id));
     }
 
     @Override
     public Admin GetById(String id) {
-        return dataStorage.Admins.stream()
-                .filter(Admin -> Admin.getId().equals(id))
+        return dataStorage.Accounts.stream()
+                .filter(account -> account instanceof Admin && account.getUsername().equals(id))
+                .map(account -> (Admin)account)
                 .findFirst()
                 .orElse(null);
     }
 
     @Override
     public List<Admin> GetAll() {
-        return dataStorage.Admins;
+        return dataStorage.Accounts.stream()
+                .filter(account -> account instanceof Admin)
+                .map(account -> (Admin) account)
+                .collect(Collectors.toList());
     }
+
     @Override
     public List<Admin> GetAll(Predicate<Admin> predicate) {
-        return GetAll().stream().filter(predicate).toList();
+        return GetAll().stream().filter(predicate).collect(Collectors.toList());
     }
+
     @Override
     public List<Admin> GetByQuery(String query) {
         if (query == null || query.isEmpty()) {
-            return dataStorage.Admins;
+            return GetAll();
         }
         return GetAll(Admin -> Admin.getName().toLowerCase().contains(query.toLowerCase()));
     }
