@@ -6,11 +6,11 @@ import com.genius.Services.*;
 
 import java.util.List;
 import java.util.function.Predicate;
-
+import java.util.stream.Collectors;
 
 public class ArtistService implements IService<Artist>, ISearchableService<Artist> {
 
-    DataStorage dataStorage;
+    private final DataStorage dataStorage;
 
     public ArtistService(DataStorage dataStorage) {
         this.dataStorage = dataStorage;
@@ -18,14 +18,15 @@ public class ArtistService implements IService<Artist>, ISearchableService<Artis
 
     @Override
     public void Add(Artist model) {
-        dataStorage.Artists.add(model);
+        dataStorage.Accounts.add(model);
     }
 
     @Override
     public void Edit(Artist model) {
-        for (int i = 0; i < dataStorage.Artists.size(); i++) {
-            if (dataStorage.Artists.get(i).getId().equals(model.getId())) {
-                dataStorage.Artists.set(i, model);
+        for (int i = 0; i < dataStorage.Accounts.size(); i++) {
+            if (dataStorage.Accounts.get(i) instanceof Artist &&
+                    dataStorage.Accounts.get(i).getUsername().equals(model.getUsername())) {
+                dataStorage.Accounts.set(i, model);
                 return;
             }
         }
@@ -33,30 +34,36 @@ public class ArtistService implements IService<Artist>, ISearchableService<Artis
 
     @Override
     public void Delete(String id) {
-        dataStorage.Artists.removeIf(Artist -> Artist.getId().equals(id));
+        dataStorage.Accounts.removeIf(account -> account instanceof Artist && account.getUsername().equals(id));
     }
 
     @Override
     public Artist GetById(String id) {
-        return dataStorage.Artists.stream()
-                .filter(Artist -> Artist.getId().equals(id))
+        return dataStorage.Accounts.stream()
+                .filter(account -> account instanceof Artist && account.getUsername().equals(id))
+                .map(account -> (Artist)account)
                 .findFirst()
                 .orElse(null);
     }
 
     @Override
     public List<Artist> GetAll() {
-        return dataStorage.Artists;
+        return dataStorage.Accounts.stream()
+                .filter(account -> account instanceof Artist)
+                .map(account -> (Artist) account)
+                .collect(Collectors.toList());
     }
+
     @Override
     public List<Artist> GetAll(Predicate<Artist> predicate) {
-        return GetAll().stream().filter(predicate).toList();
+        return GetAll().stream().filter(predicate).collect(Collectors.toList());
     }
+
     @Override
     public List<Artist> GetByQuery(String query) {
         if (query == null || query.isEmpty()) {
-            return dataStorage.Artists;
+            return GetAll();
         }
-        return GetAll(Artist -> Artist.getName().toLowerCase().contains(query.toLowerCase()));
+        return GetAll(artist -> artist.getName().toLowerCase().contains(query.toLowerCase()));
     }
 }
