@@ -6,11 +6,11 @@ import com.genius.Services.*;
 
 import java.util.List;
 import java.util.function.Predicate;
-
+import java.util.stream.Collectors;
 
 public class UserService implements IService<User>, ISearchableService<User> {
 
-    DataStorage dataStorage;
+    private final DataStorage dataStorage;
 
     public UserService(DataStorage dataStorage) {
         this.dataStorage = dataStorage;
@@ -18,14 +18,15 @@ public class UserService implements IService<User>, ISearchableService<User> {
 
     @Override
     public void Add(User model) {
-        dataStorage.Users.add(model);
+        dataStorage.Accounts.add(model);
     }
 
     @Override
     public void Edit(User model) {
-        for (int i = 0; i < dataStorage.Users.size(); i++) {
-            if (dataStorage.Users.get(i).getId().equals(model.getId())) {
-                dataStorage.Users.set(i, model);
+        for (int i = 0; i < dataStorage.Accounts.size(); i++) {
+            if (dataStorage.Accounts.get(i) instanceof User &&
+                    dataStorage.Accounts.get(i).getUsername().equals(model.getUsername())) {
+                dataStorage.Accounts.set(i, model);
                 return;
             }
         }
@@ -33,31 +34,35 @@ public class UserService implements IService<User>, ISearchableService<User> {
 
     @Override
     public void Delete(String id) {
-        dataStorage.Users.removeIf(User -> User.getId().equals(id));
+        dataStorage.Accounts.removeIf(account -> account instanceof User && account.getUsername().equals(id));
     }
 
     @Override
     public User GetById(String id) {
-        return dataStorage.Users.stream()
-                .filter(User -> User.getId().equals(id))
+        return dataStorage.Accounts.stream()
+                .filter(account -> account instanceof User && account.getUsername().equals(id))
+                .map(account -> (User)account)
                 .findFirst()
                 .orElse(null);
     }
 
     @Override
     public List<User> GetAll() {
-        return dataStorage.Users;
+        return dataStorage.Accounts.stream()
+                .filter(account -> account instanceof User)
+                .map(account -> (User) account)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<User> GetAll(Predicate<User> predicate) {
-        return GetAll().stream().filter(predicate).toList();
+        return GetAll().stream().filter(predicate).collect(Collectors.toList());
     }
 
     @Override
     public List<User> GetByQuery(String query) {
         if (query == null || query.isEmpty()) {
-            return dataStorage.Users;
+            return GetAll();
         }
         return GetAll(User -> User.getName().toLowerCase().contains(query.toLowerCase()));
     }
